[gd_scene load_steps=3 format=3 uid="uid://3sxkyn66iblw"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_jo22h"]

[sub_resource type="Theme" id="Theme_kfuv4"]
default_font_size = 24

[node name="Settings" type="Window"]
position = Vector2i(0, 36)
theme = SubResource("Theme_kfuv4")
script = ExtResource("1_jo22h")

[node name="columns" type="HBoxContainer" parent="."]
offset_right = 262.0
offset_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="labels_row" type="VBoxContainer" parent="columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSync_label" type="Label" parent="columns/labels_row"]
layout_mode = 2
tooltip_text = "If enabled, synchronizes the GPU's frame rate to the 
refresh rate of the monitor to prevent screen tearing"
mouse_filter = 1
text = "V-Sync"

[node name="FPS_label" type="Label" parent="columns/labels_row"]
layout_mode = 2
tooltip_text = "Sets GPU refresh rate
By setting it to 0 and deactivating V-Sync, the GPU will run as fast as possible"
mouse_filter = 1
text = "FPS Limit"

[node name="MSAA_label" type="Label" parent="columns/labels_row"]
layout_mode = 2
tooltip_text = "Multisample antialiasing
Higher values affect performance"
mouse_filter = 1
text = "Anti-Aliasing"

[node name="SpeakerOrientation_label" type="Label" parent="columns/labels_row"]
layout_mode = 2
tooltip_text = "If enabled, orients the speakers towards the origin"
mouse_filter = 1
text = "Speaker origin orientation"

[node name="options_row" type="VBoxContainer" parent="columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Vsync" type="CheckBox" parent="columns/options_row"]
layout_mode = 2
tooltip_text = "If enabled, synchronizes the GPU's frame rate to the 
refresh rate of the monitor to prevent screen tearing"

[node name="FPS" type="SpinBox" parent="columns/options_row"]
layout_mode = 2
tooltip_text = "Sets GPU refresh rate
By setting it to 0 and deactivating V-Sync, the GPU will run as fast as possible"
max_value = 1000.0

[node name="MSAA" type="OptionButton" parent="columns/options_row"]
layout_mode = 2
tooltip_text = "Multisample antialiasing
Higher values affect performance"

[node name="SpeakerOrientation" type="CheckBox" parent="columns/options_row"]
layout_mode = 2
tooltip_text = "If enabled, synchronizes the GPU's frame rate to the 
refresh rate of the monitor to prevent screen tearing"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="toggled" from="columns/options_row/Vsync" to="." method="_on_vsync_toggled"]
[connection signal="value_changed" from="columns/options_row/FPS" to="." method="_on_fps_value_changed"]
[connection signal="item_selected" from="columns/options_row/MSAA" to="." method="_on_msaa_item_selected"]
[connection signal="toggled" from="columns/options_row/SpeakerOrientation" to="." method="_on_speaker_orientation_toggled"]
